--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,24 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: theJaxon micro blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Please Ew3a Wesshak # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://thejaxon.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: theJaxon # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+# twitter:
+#   username: twitter_username # change to your twitter username
+author:
+  name: theJaxon
+  url: https://example.com/
 
 social:
   # Change to your full name.
@@ -42,7 +45,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://github.com/theJaxon # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -76,7 +79,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: 'common/j.jpeg'
 
 # boolean type, the global switch for TOC in posts.
 toc: true
